/**
 * This file is automatically generated
 * DO NOT EDIT manually
 * Run "node ace migration:run" command to re-generate this file
 */

import { BaseModel, column } from '@adonisjs/lucid/orm'
import { DateTime } from 'luxon'

export class AuditLogSchema extends BaseModel {
  static $columns = ['action', 'createdAt', 'id', 'ipAddress', 'payload', 'userAgent', 'userId'] as const
  $columns = AuditLogSchema.$columns
  @column()
  declare action: string
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime
  @column({ isPrimary: true })
  declare id: number
  @column()
  declare ipAddress: string | null
  @column()
  declare payload: any | null
  @column()
  declare userAgent: string | null
  @column()
  declare userId: number | null
}

export class CartItemSchema extends BaseModel {
  static $columns = ['cartId', 'createdAt', 'drugId', 'id', 'quantity', 'updatedAt'] as const
  $columns = CartItemSchema.$columns
  @column()
  declare cartId: number
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime
  @column()
  declare drugId: number
  @column({ isPrimary: true })
  declare id: number
  @column()
  declare quantity: number
  @column.dateTime({ autoCreate: true, autoUpdate: true })
  declare updatedAt: DateTime | null
}

export class CartSchema extends BaseModel {
  static $columns = ['createdAt', 'id', 'updatedAt', 'userId'] as const
  $columns = CartSchema.$columns
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime
  @column({ isPrimary: true })
  declare id: number
  @column.dateTime({ autoCreate: true, autoUpdate: true })
  declare updatedAt: DateTime | null
  @column()
  declare userId: number | null
}

export class DrugBatchSchema extends BaseModel {
  static $columns = ['batchNumber', 'createdAt', 'drugId', 'expiresAt', 'id', 'quantity', 'updatedAt'] as const
  $columns = DrugBatchSchema.$columns
  @column()
  declare batchNumber: string
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime
  @column()
  declare drugId: number
  @column.dateTime()
  declare expiresAt: DateTime
  @column({ isPrimary: true })
  declare id: number
  @column()
  declare quantity: number
  @column.dateTime({ autoCreate: true, autoUpdate: true })
  declare updatedAt: DateTime | null
}

export class DrugCategorySchema extends BaseModel {
  static $columns = ['createdAt', 'description', 'id', 'name', 'updatedAt'] as const
  $columns = DrugCategorySchema.$columns
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime
  @column()
  declare description: string | null
  @column({ isPrimary: true })
  declare id: number
  @column()
  declare name: string
  @column.dateTime({ autoCreate: true, autoUpdate: true })
  declare updatedAt: DateTime | null
}

export class DrugSchema extends BaseModel {
  static $columns = ['categoryId', 'composition', 'createdAt', 'description', 'dosage', 'id', 'imageUrl', 'isActive', 'minStock', 'name', 'price', 'requiresPrescription', 'sideEffects', 'sku', 'supplierId', 'updatedAt'] as const
  $columns = DrugSchema.$columns
  @column()
  declare categoryId: number
  @column()
  declare composition: string | null
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime
  @column()
  declare description: string | null
  @column()
  declare dosage: string | null
  @column({ isPrimary: true })
  declare id: number
  @column()
  declare imageUrl: string | null
  @column()
  declare isActive: boolean
  @column()
  declare minStock: number
  @column()
  declare name: string
  @column()
  declare price: string
  @column()
  declare requiresPrescription: boolean
  @column()
  declare sideEffects: string | null
  @column()
  declare sku: string
  @column()
  declare supplierId: number | null
  @column.dateTime({ autoCreate: true, autoUpdate: true })
  declare updatedAt: DateTime | null
}

export class ErrorLogSchema extends BaseModel {
  static $columns = ['context', 'createdAt', 'id', 'message', 'severity', 'stack'] as const
  $columns = ErrorLogSchema.$columns
  @column()
  declare context: any | null
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime | null
  @column({ isPrimary: true })
  declare id: number
  @column()
  declare message: string
  @column()
  declare severity: string
  @column()
  declare stack: string | null
}

export class NotificationSchema extends BaseModel {
  static $columns = ['createdAt', 'id', 'isRead', 'link', 'message', 'title', 'type', 'updatedAt', 'userId'] as const
  $columns = NotificationSchema.$columns
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime | null
  @column({ isPrimary: true })
  declare id: number
  @column()
  declare isRead: boolean | null
  @column()
  declare link: string | null
  @column()
  declare message: string
  @column()
  declare title: string
  @column()
  declare type: string
  @column.dateTime({ autoCreate: true, autoUpdate: true })
  declare updatedAt: DateTime | null
  @column()
  declare userId: number | null
}

export class OrderItemSchema extends BaseModel {
  static $columns = ['createdAt', 'drugId', 'id', 'orderId', 'priceAtSale', 'quantity', 'updatedAt'] as const
  $columns = OrderItemSchema.$columns
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime
  @column()
  declare drugId: number
  @column({ isPrimary: true })
  declare id: number
  @column()
  declare orderId: number
  @column()
  declare priceAtSale: string
  @column()
  declare quantity: number
  @column.dateTime({ autoCreate: true, autoUpdate: true })
  declare updatedAt: DateTime | null
}

export class OrderSchema extends BaseModel {
  static $columns = ['createdAt', 'id', 'status', 'totalPrice', 'updatedAt', 'userId'] as const
  $columns = OrderSchema.$columns
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime
  @column({ isPrimary: true })
  declare id: number
  @column()
  declare status: string
  @column()
  declare totalPrice: string
  @column.dateTime({ autoCreate: true, autoUpdate: true })
  declare updatedAt: DateTime | null
  @column()
  declare userId: number
}

export class PaymentSchema extends BaseModel {
  static $columns = ['amount', 'createdAt', 'id', 'method', 'orderId', 'proofPath', 'status', 'updatedAt'] as const
  $columns = PaymentSchema.$columns
  @column()
  declare amount: string
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime
  @column({ isPrimary: true })
  declare id: number
  @column()
  declare method: string
  @column()
  declare orderId: number
  @column()
  declare proofPath: string | null
  @column()
  declare status: string
  @column.dateTime({ autoCreate: true, autoUpdate: true })
  declare updatedAt: DateTime | null
}

export class PrescriptionSchema extends BaseModel {
  static $columns = ['createdAt', 'filePath', 'id', 'orderId', 'pharmacistNotes', 'status', 'updatedAt'] as const
  $columns = PrescriptionSchema.$columns
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime
  @column()
  declare filePath: string
  @column({ isPrimary: true })
  declare id: number
  @column()
  declare orderId: number
  @column()
  declare pharmacistNotes: string | null
  @column()
  declare status: string
  @column.dateTime({ autoCreate: true, autoUpdate: true })
  declare updatedAt: DateTime | null
}

export class StockMovementSchema extends BaseModel {
  static $columns = ['createdAt', 'description', 'drugId', 'id', 'orderId', 'quantity', 'type'] as const
  $columns = StockMovementSchema.$columns
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime
  @column()
  declare description: string | null
  @column()
  declare drugId: number
  @column({ isPrimary: true })
  declare id: number
  @column()
  declare orderId: number | null
  @column()
  declare quantity: number
  @column()
  declare type: string
}

export class SupplierSchema extends BaseModel {
  static $columns = ['address', 'contact', 'createdAt', 'id', 'name', 'updatedAt'] as const
  $columns = SupplierSchema.$columns
  @column()
  declare address: string | null
  @column()
  declare contact: string | null
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime
  @column({ isPrimary: true })
  declare id: number
  @column()
  declare name: string
  @column.dateTime({ autoCreate: true, autoUpdate: true })
  declare updatedAt: DateTime | null
}

export class UserSchema extends BaseModel {
  static $columns = ['createdAt', 'email', 'emailVerifiedAt', 'fullName', 'id', 'password', 'role', 'updatedAt'] as const
  $columns = UserSchema.$columns
  @column.dateTime({ autoCreate: true })
  declare createdAt: DateTime
  @column()
  declare email: string
  @column.dateTime()
  declare emailVerifiedAt: DateTime | null
  @column()
  declare fullName: string | null
  @column({ isPrimary: true })
  declare id: number
  @column({ serializeAs: null })
  declare password: string
  @column()
  declare role: string
  @column.dateTime({ autoCreate: true, autoUpdate: true })
  declare updatedAt: DateTime | null
}
